--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                                         </div>
                                         <div class="row align-items-center">
                                             <p class="text-start textMedium textBrown">Licencia No.</p>
-                                            <p class="text-start textBLarge textGreen"> BVA0017780 </p>
+                                            <p class="text-start textBLarge textGreen"> C0010023766 </p>
                                         </div>
                                     </div>
                                 </div>
@@ -116,7 +116,7 @@
                                         </div>
                                         <div class="col divSpaceMed container">
                                             <p class="text-start textMedium textBrown">Chofer </p>
-                                            <p class="text-start textBLarge textGreen"> BVA0017780 </p>
+                                            <p class="text-start textBLarge textGreen"> C0010023766 </p>
                                         </div>
                                     </div>
                                     <div class="col-md-6">
